Updates ABout page to fix links, shift pictures left, and better outline people data in the _data/people file

--- a/css/custom.css
+++ b/css/custom.css
@@ -22,6 +22,10 @@ div:target {
   margin-left: 50px;
 }
 
+.lead > .why {
+  font-weight: bold;
+}
+
 .blog {
   margin-left: 50px;
   margin-right: 50px;
